tests/fixtures/typeck/function_argument_type_mismatch.veyl
fn add_one(value: Int) -> Int {
    value + 1
}

fn main() {
    let value = add_one(true);
}
